イベント捕捉

--- a/ethereum/06. ethers.js.md
+++ b/ethereum/06. ethers.js.md
@@ -2,7 +2,7 @@
 
 ethereum RPC の ラッピングクライアントの使い方
 
-2024/11/26
+2024/12/11
 Shigeichiro Yamasaki
 
 ## 前提条件
@@ -92,7 +92,7 @@ HardhatEthersProvider {
 }
 ```
 
-ブロック番号の取得
+* ブロック番号の取得
 
 ```js
 > await ethers.provider.getBlockNumber()
@@ -101,6 +101,8 @@ HardhatEthersProvider {
 2
 ```
 
+* 残高の確認
+  
 metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199` のとき
 
 ```js
@@ -108,6 +110,7 @@ metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930e
 =>
 10000000000000000000000n
 ```
+
 
 ### Signer
 
@@ -258,7 +261,7 @@ TransactionResponse {
 > const contract = new ethers.Contract(contractAddress, abi, s0)
 ```
 
-コントラクトオブジェクトの確認
+* コントラクトオブジェクトの確認
 
 ```js
 > contract
@@ -294,7 +297,7 @@ Contract {
 }
 ```
 
-コントラクトオブジェクトへの操作
+* コントラクトオブジェクトへの操作
 
 ```js
 await contract.balanceOf(s0)
@@ -513,4 +516,43 @@ TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 上記の場合，Token コントラクトのアカウントのアドレスは
 
 `0x5FbDB2315678afecb367f032d93F642f64180aa3` です
+
+## イベントの捕捉
+
+ERC-20 イベントの捕捉の場合
+
+```js
+abi = [
+  "event Transfer(address indexed from, address indexed to, uint amount)"
+]
+
+// コントラクトの生成と Providerへの接続
+contract = new Contract("dai.tokens.ethers.eth", abi, provider)
+
+// Transfer イベントの監視開始
+contract.on("Transfer", (from, to, _amount, event) => {
+  const amount = formatEther(_amount, 18)
+  console.log(`${ from } => ${ to }: ${ amount }`);
+  // イベント監視の終了
+  event.removeListener();
+});
+
+// Same as above
+contract.on(contract.filters.Transfer, (from, to, amount, event) => {
+  // See above
+})
+
+// Listen for any Transfer to "ethers.eth"
+filter = contract.filters.Transfer("ethers.eth")
+contract.on(filter, (from, to, amount, event) => {
+  // `to` will always be equal to the address of "ethers.eth"
+});
+
+// Listen for any event, whether it is present in the ABI
+// or not. Since unknown events can be picked up, the
+// parameters are not destructed.
+contract.on("*", (event) => {
+  // The `event.log` has the entire EventLog
+});
+```
 
