--- a/ethereum/05. ERC721.md
+++ b/ethereum/05. ERC721.md
@@ -1,6 +1,6 @@
 # 05. ERC721 トークンの作成と利用
 
-2024/12/11
+2024/12/13
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC721 NFTを処理するコントラクト
@@ -155,15 +155,17 @@ yarn add --dev @openzeppelin/contracts
 ### NFTの属性
 
 * Mintable：音源 NFT を生成できる
+* tokenIDは自動でインクリメントされます
 * NFTの所有者によるアクセス制御を備えます
 * URIで参照するストレージで音源データの実体を管理します
+* 
 
 ```bash
 nano contracts/MusicNFT.sol
 ```
 
 * コントラクト名：MusicNFT
-* 
+* トークン名：MFT
 
 ```js
 // SPDX-License-Identifier: MIT
@@ -171,33 +173,41 @@ nano contracts/MusicNFT.sol
 pragma solidity ^0.8.22;
 
 import {ERC721} from "@openzeppelin/contracts/token/ERC721/ERC721.sol";
+import {ERC721Burnable} from "@openzeppelin/contracts/token/ERC721/extensions/ERC721Burnable.sol";
+import {ERC721Enumerable} from "@openzeppelin/contracts/token/ERC721/extensions/ERC721Enumerable.sol";
 import {ERC721URIStorage} from "@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol";
 import {Ownable} from "@openzeppelin/contracts/access/Ownable.sol";
 
-contract MusicNFT is ERC721, ERC721URIStorage, Ownable {
+contract MusicNFT is ERC721, ERC721Enumerable, ERC721URIStorage, ERC721Burnable, Ownable {
     uint256 private _nextTokenId;
-    // 採掘されたNFTの tokenID などの情報を通知するイベント
-    event Mint(address to, string uri, uint256 tokenId);
 
     constructor(address initialOwner)
         ERC721("MusicNFT", "MFT")
         Ownable(initialOwner)
     {}
 
-    function _baseURI() internal pure override returns (string memory) {
-        return "https://music.example/";
-    }
-    
-    // このコントラクトをデプロイした所有者のみが新たなNFTを採掘できる
     function safeMint(address to, string memory uri) public onlyOwner {
         uint256 tokenId = _nextTokenId++;
         _safeMint(to, tokenId);
         _setTokenURI(tokenId, uri);
-        // 採掘されたNFTの情報を通知するイベントの発出
-        emit Mint(to, uri, tokenId);
     }
 
     // The following functions are overrides required by Solidity.
+
+    function _update(address to, uint256 tokenId, address auth)
+        internal
+        override(ERC721, ERC721Enumerable)
+        returns (address)
+    {
+        return super._update(to, tokenId, auth);
+    }
+
+    function _increaseBalance(address account, uint128 value)
+        internal
+        override(ERC721, ERC721Enumerable)
+    {
+        super._increaseBalance(account, value);
+    }
 
     function tokenURI(uint256 tokenId)
         public
@@ -211,12 +221,13 @@ contract MusicNFT is ERC721, ERC721URIStorage, Ownable {
     function supportsInterface(bytes4 interfaceId)
         public
         view
-        override(ERC721, ERC721URIStorage)
+        override(ERC721, ERC721Enumerable, ERC721URIStorage)
         returns (bool)
     {
         return super.supportsInterface(interfaceId);
     }
 }
+
 ```
 
 ## コントラクトのコンパイル
@@ -249,29 +260,32 @@ describe("MusicNFTコントラクト", function () {
   it("音楽家 addr1 の音源 music1 の MusicNFTの生成", async function () {
     // MusicNFTテスト用フィクスチャをロードする
     const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
-    // イベントリスナーを起動
-    const provider = new ethers.providers.Web3Provider(window.ethereum);
-    const contract = new Contract(erc20TokenAddress, ERC20_ABI, provider);
-
-
-    let uri1 = "https://music.example/music1.json";
+    let uri1 = "https://music.example/music-0.json";
     await MusicNFT.safeMint(addr1.address, uri1);
-    // 最初のNFTのTokenID は 0 
-    console.log(await MusicNFT.ownerOf(0));
-    // TokenURIの確認
-    console.log(await MusicNFT.tokenURI(0));
     expect(await MusicNFT.balanceOf(addr1)).to.equal(1);
   });
   it("NFTの所有の移転", async function () {
     // MusicNFTテスト用フィクスチャをロードする
     const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
-    let uri1 = "https://music.example/music1.json";
+    let uri1 = `https://music.example/music-0.json`;
     await MusicNFT.safeMint(addr1.address, uri1);
     // addr1 からの指示で，addr1 から addr2 にNFTの所有を移転する
     await MusicNFT.connect(addr1).safeTransferFrom(addr1.address, addr2.address, 0);
     expect(await MusicNFT.ownerOf(0)).to.equal(addr2.address);
   });
+  it("特定アカウントが所有するNFT", async function () {
+    // MusicNFTテスト用フィクスチャをロードする
+    const {MusicNFT, owner, addr1, addr2} = await loadFixture(deployMusicNFTFixture);
+    let uri1 = `https://music.example/music-0.json`;
+    await MusicNFT.safeMint(addr1.address, uri1);
+    await MusicNFT.safeMint(addr2.address, uri1);
+    await MusicNFT.safeMint(addr1.address, uri1);
+    // addr1 が所有するNFTのインデックス1 の tokenID は 2n
+    const tokenID = await MusicNFT.tokenOfOwnerByIndex(addr1, 1);
+    expect(tokenID).to.equal(2n);
+  });
 });
+
 
 ```
 
@@ -281,13 +295,12 @@ describe("MusicNFTコントラクト", function () {
 npx hardhat test 
 
   MusicNFTコントラクト
-0x70997970C51812dc3A010C7d01b50e0d17dc79C8
-https://music.example/https://music.example/music1.json
-    ✔ 音楽家 addr1 の音源 music1 の MusicNFTの生成 (397ms)
+    ✔ 音楽家 addr1 の音源 music1 の MusicNFTの生成 (431ms)
     ✔ NFTの所有の移転
+    ✔ 特定アカウントが所有するNFT
 
 
-  2 passing (406ms)
+  3 passing (440ms)
 ```
 
 ## hardhat node の起動
