当事者間のトークンの送付

--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -1,6 +1,6 @@
 # 04. ERC20 トークンの作成と利用
 
-2024/11/27
+2024/12/14
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -87,7 +87,9 @@ cd erc20
 yarn init -y
 yarn add --dev hardhat
 npx hardhat init
+```
 
+```bash
 // 消さなくても実害は無いが消しておく
 rm contracts/Lock.sol
 rm test/Lock.js
@@ -126,7 +128,7 @@ pragma solidity ^0.8.0;
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
 
 contract JPYcoin is ERC20 {
-  // ERC20 コントラクトのコンストラクタの引数 (name, symbol,decimals)
+  // ERC20 コントラクトのコンストラクタの引数 (name, symbol)
     constructor(uint256 initialSupply) ERC20("JPYcoin", "JPQ") {
         _mint(msg.sender, initialSupply);
     }
@@ -157,7 +159,7 @@ describe("JPYcoinコントラクト", function () {
   async function deployJPYcoinFixture() {
     // テスト用アカウントの取得
     const [owner, addr1, addr2] = await ethers.getSigners();
-    // コントラクトをデプロイする(初期供給量 10**11)
+    // コントラクトをデプロイする（総供給量 10**11)
     const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
     // JPYcoinテスト用フィクスチャ
     return {JPYcoin, owner, addr1, addr2};
@@ -168,12 +170,23 @@ describe("JPYcoinコントラクト", function () {
     const total = await JPYcoin.totalSupply();
     expect(await JPYcoin.balanceOf(owner.address)).to.equal(total);
   });
-  it("JPYcoinの転送", async function () {
+  it("JPYcoinの owner から addr1 への配布", async function () {
     // EthWalletテスト用フィクスチャをロードする
     const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    //addr1 へ8000000n配布する
     await JPYcoin.transfer(addr1,8000000n);
     expect(await JPYcoin.balanceOf(addr1.address)).to.equal(8000000n);
     expect(await JPYcoin.balanceOf(owner.address)).to.equal(10n**11n-8000000n);
+  });
+  it("JPYcoinの addr1 から addr2 への送付", async function () {
+    // EthWalletテスト用フィクスチャをロードする
+    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    //addr1 へ8000000n配布する
+    await JPYcoin.transfer(addr1,8000000n);
+    //connect で addr1 の立場になって，addr2 へ 1000000n送付する
+    await JPYcoin.connect(addr1).transfer(addr2,1000000n);
+    expect(await JPYcoin.balanceOf(addr1.address)).to.equal(7000000n);
+    expect(await JPYcoin.balanceOf(addr2.address)).to.equal(1000000n);
   });
 
 });
@@ -186,11 +199,12 @@ describe("JPYcoinコントラクト", function () {
 npx hardhat test 
 =>
   JPYcoinコントラクト
-    ✔ JPYcoinの総供給量をownerが所有している (399ms)
-    ✔ JPYcoinの転送
+    ✔ JPYcoinの総供給量をownerが所有している (382ms)
+    ✔ JPYcoinの owner から addr1 への配布
+    ✔ JPYcoinの addr1 から addr2 への送付
 
 
-  2 passing (402ms)
+  3 passing (388ms)
 ```
 
 ## hardhat node の起動
@@ -221,7 +235,7 @@ const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 // モジュール名 JPYcoin
 module.exports = buildModule("JPYcoin", (m) => {
   // コントラクト名 JPYcoin
-  // コンストラクタの引数として初期のトーク供給量を 10の11乗とする
+  // コンストラクタの引数としてトークン総供給量を 10の11乗とする
   const contract = m.contract("JPYcoin", [10**11]);
   return { contract };
 });
@@ -258,8 +272,11 @@ npx hardhat console --network localhost
 
 ### ERC20 コントラクトへの操作
 
+以下の操作をしながら，ノードの画面に表示されるログも確認してください
+
 ```js
 > const JPYcoin_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+// コントラクトのデプロイ
 > const JPYcoin_Factory = await ethers.getContractFactory("JPYcoin")
 // 当該コントラクトアドレスのコントラクトに接続する
 > const JPYcoin = await JPYcoin_Factory.attach(JPYcoin_addr)
