--- a/ethereum/10. SBT.md
+++ b/ethereum/10. SBT.md
@@ -1,6 +1,6 @@
 # 10. ERC-5192 SBT (SoulBound Token) 譲渡不可能な NFT
 
-2024/12/11
+2024/12/13
 Shigeichiro Yamasaki
 
 ## ERC-5192 の仕様
@@ -60,34 +60,15 @@ cd sbt
 yarn init -y
 yarn add --dev hardhat
 npx hardhat init
+```
 
+```bash
 // 消さなくても実害は無いが消しておく
-
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
 ```
 
-## Solidity プログラム
-
-SBT の solidity プログラム
-
-```bash
-nano contracts/sbt.sol
-```
-
-```js
-// SPDX-License-Identifier: MIT
-// Compatible with OpenZeppelin Contracts ^5.0.0
-pragma solidity ^0.8.22;
-
-import {ERC721} from "@openzeppelin/contracts/token/ERC721/ERC721.sol";
-
-contract SBT is ERC721 {
-    constructor() ERC721("SBT", "SBT") {}
-}
-
-```
 
 ## OpenZeppelinの ERC20 ライブラリのインストール
 
@@ -96,61 +77,162 @@ yarn add --dev @openzeppelin/contracts
 ```
 
 
-##  コンパイル
+## Solidity プログラム
+
+SBT の solidity プログラム
 
 ```bash
-npx hardhat compile
+mkdir contracts/ERC5192
 ```
 
-
-## テストの作成
-
 ```bash
-nano test/sbt.js
+nano contracts/ERC5192/IERC5192.sol
 ```
 
 ```js
-// hardhat tool box の利用
-const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
-// CHaiの利用
-const { expect } = require("chai");
+// SPDX-License-Identifier: CC0-1.0
+pragma solidity ^0.8.0;
 
-describe("SBTコントラクト", function () {
-  async function deploySBTFixture() {
-    // テスト用アカウントの取得
-    const [owner, addr1, addr2] = await ethers.getSigners();
-    // コントラクトをデプロイする(初期供給量 10**11)
-    const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
-    // JPYcoinテスト用フィクスチャ
-    return {JPYcoin, owner, addr1, addr2};
-  }
-  it("JPYcoinの総供給量をownerが所有している", async function () {
-    // EthWalletテスト用フィクスチャをロードする
-    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
-    const total = await JPYcoin.totalSupply();
-    expect(await JPYcoin.balanceOf(owner.address)).to.equal(total);
-  });
-  it("JPYcoinの転送", async function () {
-    // EthWalletテスト用フィクスチャをロードする
-    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
-    await JPYcoin.transfer(addr1,8000000n);
-    expect(await JPYcoin.balanceOf(addr1.address)).to.equal(8000000n);
-    expect(await JPYcoin.balanceOf(owner.address)).to.equal(10n**11n-8000000n);
-  });
+interface IERC5192 {
+  /// @notice Emitted when the locking status is changed to locked.
+  /// @dev If a token is minted and the status is locked, this event should be emitted.
+  /// @param tokenId The identifier for a token.
+  event Locked(uint256 tokenId);
 
-});
+  /// @notice Emitted when the locking status is changed to unlocked.
+  /// @dev If a token is minted and the status is unlocked, this event should be emitted.
+  /// @param tokenId The identifier for a token.
+  event Unlocked(uint256 tokenId);
 
+  /// @notice Returns the locking status of an Soulbound Token
+  /// @dev SBTs assigned to zero address are considered invalid, and queries
+  /// about them do throw.
+  /// @param tokenId The identifier for an SBT.
+  function locked(uint256 tokenId) external view returns (bool);
+}
 ```
 
-### testの実行
 
 ```bash
-npx hardhat test 
-=>
-  JPYcoinコントラクト
-    ✔ JPYcoinの総供給量をownerが所有している (399ms)
-    ✔ JPYcoinの転送
-
-
-  2 passing (402ms)
+nano contracts/ERC5192/ERC5192.sol
 ```
+
+```js
+// SPDX-License-Identifier: GPL-3.0-only
+pragma solidity ^0.8.13;
+
+import {ERC721} from "@openzeppelin/contracts/token/ERC721/ERC721.sol";
+import {IERC5192} from "./IERC5192.sol";
+
+abstract contract ERC5192 is ERC721, IERC5192 {
+  bool private isLocked;
+
+  error ErrLocked();
+  error ErrNotFound();
+
+  constructor(string memory _name, string memory _symbol, bool _isLocked)
+    ERC721(_name, _symbol)
+  {
+    isLocked = _isLocked;
+  }
+
+  modifier checkLock() {
+    if (isLocked) revert ErrLocked();
+    _;
+  }
+
+  function locked(uint256 tokenId) external view returns (bool) {
+    require(_ownerOf(tokenId) != address(0), "Token does not exist");
+    return isLocked;
+  }
+
+  function safeTransferFrom(
+    address from,
+    address to,
+    uint256 tokenId,
+    bytes memory data
+  ) virtual public override checkLock {
+    super.safeTransferFrom(from, to, tokenId, data);
+  }
+
+  function safeTransferFrom(address from, address to, uint256 tokenId)
+    virtual public
+    override
+    checkLock
+  {
+    super.safeTransferFrom(from, to, tokenId);
+  }
+
+  function transferFrom(address from, address to, uint256 tokenId)
+    public
+    override
+    checkLock
+  {
+    super.transferFrom(from, to, tokenId);
+  }
+
+  function approve(address approved, uint256 tokenId) public override checkLock {
+    super.approve(approved, tokenId);
+  }
+
+  function setApprovalForAll(address operator, bool approved)
+    public
+    override
+    checkLock
+  {
+    super.setApprovalForAll(operator, approved);
+  }
+
+  function supportsInterface(bytes4 interfaceId)
+    public
+    view
+    virtual
+    override
+    returns (bool)
+  {
+    return interfaceId == type(IERC5192).interfaceId
+      || super.supportsInterface(interfaceId);
+  }
+}
+```
+
+* ERC-721
+
+```bash
+mkdir contracts/ERC721
+```
+
+```bash
+nano contracts/ERC721/ERC721.sol
+```
+
+```js
+```
+
+* SBT
+
+```bash
+nano contracts/sbt.sol
+```
+
+```js
+// SPDX-License-Identifier: MIT
+pragma solidity ^0.8.13;
+
+import {ERC5192} from "./ERC5192/ERC5192.sol";
+
+contract SBT is ERC5192 {
+  bool private isLocked;
+  constructor(string memory _name, string memory _symbol, bool _isLocked)
+    ERC5192(_name, _symbol, _isLocked)
+  {
+    isLocked = _isLocked;
+  }
+  function safeMint(address to, uint256 tokenId) external {
+    _safeMint(to, tokenId);
+    if (isLocked) emit Locked(tokenId);
+  }
+}
+
+```
+
