--- a/ethereum/11. ERC7303.md
+++ b/ethereum/11. ERC7303.md
@@ -1,7 +1,15 @@
-# 11. ERC-7303 NFT所有権に基づくアクセス制御
+# 11. NFT所有権に基づくアクセス制御
 
-2024/12/11
+2024/12/15
 Shigeichiro Yamasaki
 
+## OpenZeppelin アクセス制御ライブラリ
 
+[Access control](https://docs.openzeppelin.com/contracts/5.x/api/access#AccessControl)
 
+`import "@openzeppelin/contracts/access/AccessControl.sol";`
+
+* ロールベースドアクセス制御の実装
+* オフチェーンでイベントログにアクセスする以外ではロールのメンバーを列挙できない
+* ロールは識別子で参照される
+* 
