--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2024/11/27
+2025/01.24
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -31,7 +31,7 @@ npm install -g yarn
 
 node -v
 =>
-v22.11.0
+v22.13.1
 ```
 * VS code のインストール
 
@@ -54,7 +54,7 @@ npm install -g yarn
 
 node -v
 =>
-v22.11.0
+v22.13.1
 ```
 
 * VS code のインストール
@@ -298,9 +298,9 @@ artifacts ディレクトリ以下を3階層まで木構造表示させると以
  tree artifacts -L 3 
 
 =>
-.
+artifacts
 ├── build-info
-│   └── 94c0b958419f077d841398267624fa75.json
+│   └── 3bbdeea033514ca538b39c745e3e170d.json
 └── contracts
     └── Token.sol
         ├── Token.dbg.json
@@ -567,12 +567,14 @@ npx hardhat test
 
 =>
 
-  トークンのコントラクト
-    ✔ トークンの総供給量が所有者に割り当てられること (433ms)
+  Tokenコントラクト
+    ✔ Tokenの総量が owner に割り当てられていること (387ms)
     ✔ アカウント間でトークンが転送されること
 
 
-  2 passing (446ms)
+  2 passing (402ms)
+
+
 ```
 
 
