--- a/ethereum/11. Access control NFT.md
+++ b/ethereum/11. Access control NFT.md
@@ -1,7 +1,14 @@
-# 11. ERC-7303 NFT所有権に基づくアクセス制御
+# 11. NFT所有権に基づくアクセス制御
 
-2024/12/11
+2024/12/19
 Shigeichiro Yamasaki
+
+
+## OpenZeppelin ERC721 の role ベースアクセス制御
+
+[OpenZeppelinのアクセス制御解説](https://docs.openzeppelin.com/contracts/5.x/api/access#AccessControl)
+
+`import "@openzeppelin/contracts/access/AccessControl.sol";`
 
 
 
