--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -49,7 +49,7 @@ source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
-nvm install --lts
+nvm install 22.13.1
 npm install -g yarn
 
 node -v
