--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -1,6 +1,6 @@
 # 04. ERC20 トークンの作成と利用
 
-2024/12/14
+2025/01/24
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -91,6 +91,7 @@ npx hardhat init
 
 ```bash
 // 消さなくても実害は無いが消しておく
+
 rm contracts/Lock.sol
 rm test/Lock.js
 rm ignition/modules/Lock.js
@@ -506,16 +507,16 @@ npx hardhat console --network localhost
 * トークン購入 (ETH を 50000 wei) 送金
 
 ```js
-> await JPYF.buyTokens({value: 50000})
+> await JPYFaucet.buyTokens({value: 50000})
 
 ```
 
 * トークン保有量の確認
 
 ```js
-> await JPQ.balanceOf(addr1.address)
+> await JPYcoin.balanceOf(addr1.address)
 8000000n
-> await JPQ.balanceOf(owner.address)
+> await JPYcoin.balanceOf(owner.address)
 99992000000n
 
 ```
