--- a/ethereum/06. ethers.js.md
+++ b/ethereum/06. ethers.js.md
@@ -11,6 +11,10 @@ Shigeichiro Yamasaki
 * Hardhat console を hardhat node に接続している
 * 以下，hardhat console から実行する
 
+## 仕様書
+
+[etheres Documentation (v6)](https://docs.ethers.org/v6/)
+
 ## ethers.js のAPI一覧の表示
 
 ```js
@@ -18,28 +22,14 @@ Shigeichiro Yamasaki
 
 =>
 {
-  version: '6.13.2',
+{
+  version: '6.13.5',
   decodeBytes32String: [Function: decodeBytes32String],
   encodeBytes32String: [Function: encodeBytes32String],
   AbiCoder: [class AbiCoder],
-  ConstructorFragment: [class ConstructorFragment extends Fragment],
-  ErrorFragment: [class ErrorFragment extends NamedFragment],
-  EventFragment: [class EventFragment extends NamedFragment],
-  Fragment: [class Fragment],
-  FallbackFragment: [class FallbackFragment extends Fragment],
-  FunctionFragment: [class FunctionFragment extends NamedFragment],
-  NamedFragment: [class NamedFragment extends Fragment],
   
   ...
 
-  },
-  getSigner: [Function: getSigner],
-  getSigners: [Function: getSigners],
-  getImpersonatedSigner: [Function: getImpersonatedSigner],
-  getContractFactory: [Function: bound getContractFactory] AsyncFunction,
-  getContractFactoryFromArtifact: [Function: getContractFactoryFromArtifact],
-  getContractAt: [Function: getContractAt],
-  getContractAtFromArtifact: [Function: getContractAtFromArtifact],
   deployContract: [Function: bound deployContract] AsyncFunction
 }
 > 
@@ -49,9 +39,11 @@ Shigeichiro Yamasaki
 
 ethereum RPC の基本要素を javaSCript オブジェクトにしたものです
 
-* Provider :  ethereum ネットワーク
-* Signer :    署名鍵をもつオブジェクト
-* Contract :  特定のコントラクトをjavaScriptオブジェクトに見せたもの
+* Provider :  ethereum ネットワークに接続してブロックチェーンの状態やイベントログを参照（読み取り専用）
+* Signer : アカウントに関する操作を行う．秘密鍵を使用した処理ができる（ワレットなどによる承認が必要）
+* Transaction:トランザクションの実行と更新された情報の取得
+* Contract :  特定のコントラクトを javaScriptオブジェクトにしたもの
+* Receipt: トランザクションがブロックに格納されるとレシートが利用可能になる．トランザクションが格納されたブロックや消費したガスや発生したイベントなどの情報を得ることができる
 
 
 ### Provider
@@ -71,18 +63,6 @@ HardhatEthersProvider {
       _maxListeners: undefined,
       [Symbol(shapeMode)]: false,
       [Symbol(kCapture)]: false
-    },
-    _initializingPromise: Promise {
-      [BackwardsCompatibilityProviderAdapter],
-      [Symbol(async_id_symbol)]: 148,
-      [Symbol(trigger_async_id_symbol)]: 15
-    },
-    provider: BackwardsCompatibilityProviderAdapter {
-      _wrapped: [AutomaticGasPriceProvider],
-      _provider: [AutomaticGasPriceProvider],
-      sendAsync: [Function: bound sendAsync],
-      send: [Function: bound send],
-      _sendJsonRpcRequest: [Function: bound _sendJsonRpcRequest] AsyncFunction
     }
   },
   _networkName: 'localhost',
@@ -399,8 +379,6 @@ Uint8Array(6) [ 115, 101, 99, 114, 101, 116 ]
 ### インスタンスの生成
 
 `new ethers.ContractFactory( interface , bytecode [ , signer ] )`
-
-* 
 
 
 ## ethers.js を使ったコントラクトのデプロイ
