ライブラリバージョンの確認
ライブラリバージョンの確認

--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -1,9 +1,12 @@
 # 04. ERC20 トークンの作成と利用
 
-2025/01/24
+2025/02/05
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
+
+* FT の基本機能
+* ERC-20 faucet による代理送金
 
 ## ERC-20の仕様
 
