--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -1,7 +1,11 @@
 # 08. Solidity の interface
 
-2024/12/11
+2025/02/05
+
 Shigeichiro Yamasaki
+
+* ERC-20 トークンの送金先コントラクトの作成
+* IERC20 interface の利用
 
 ## Solidity の interface とは何か？
 
