--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -1,6 +1,6 @@
 # 04. ERC20 トークンの作成と利用
 
-2025/02/05
+2025/02/06
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -123,7 +123,7 @@ nano contracts/JPYcoin.sol
 * コントラクトの継承とコンストラクタの間接的初期化
 
   * OpenZeppelin の ERC20 コントラクトを継承して子コントラクトを作成しています．
-  * この子コントラクトのコンストラクタでは親コントラクトの初期化も必要になることに注意してください．
+  * このコントラクトのコンストラクタでは is を使った親コントラクトの初期化も必要になることに注意してください．
 
 ```js
 // SPDX-License-Identifier: MIT
@@ -140,14 +140,13 @@ contract JPYcoin is ERC20 {
 
 ```
 
-## コントラクトのコンパイル
+### コントラクトのコンパイル
 
 ```bash
 npx hardhat compile
 ```
 
-
-## テストの作成
+## JPYcoinコントラクトのテスト
 
 ```bash
 nano test/JPYcoin.js
@@ -160,6 +159,7 @@ const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers"
 const { expect } = require("chai");
 
 describe("JPYcoinコントラクト", function () {
+  // JPYcoin コントラクトのフィクスチャをデプロイする関数
   async function deployJPYcoinFixture() {
     // テスト用アカウントの取得
     const [owner, addr1, addr2] = await ethers.getSigners();
@@ -169,30 +169,34 @@ describe("JPYcoinコントラクト", function () {
     return {JPYcoin, owner, addr1, addr2};
   }
   it("JPYcoinの総供給量をownerが所有している", async function () {
-    // EthWalletテスト用フィクスチャをロードする
+    // JPYcoinテスト用フィクスチャをロードする
     const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    // トークンの総供給量
     const total = await JPYcoin.totalSupply();
+    // ownerが所有しているトークンの量がトークンの総供給量に等しい
     expect(await JPYcoin.balanceOf(owner.address)).to.equal(total);
   });
-  it("JPYcoinの owner から addr1 への配布", async function () {
-    // EthWalletテスト用フィクスチャをロードする
+  it("JPYcoin トークンを owner から addr1 へ送付", async function () {
+    // JPYcoinテスト用フィクスチャをロードする
     const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
-    //addr1 へ8000000n配布する
+    //addr1 へ8000000n 送付する
     await JPYcoin.transfer(addr1,8000000n);
+    // addr1 の所有トークン量が 8000000n
     expect(await JPYcoin.balanceOf(addr1.address)).to.equal(8000000n);
+    // owner の所有トークン量が 10n**11n-8000000n
     expect(await JPYcoin.balanceOf(owner.address)).to.equal(10n**11n-8000000n);
   });
-  it("JPYcoinの addr1 から addr2 への送付", async function () {
-    // EthWalletテスト用フィクスチャをロードする
+  it("JPYcoinトークンを addr1 から addr2 へ送付", async function () {
+    // JPYcoinテスト用フィクスチャをロードする
     const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
     //addr1 へ8000000n配布する
     await JPYcoin.transfer(addr1,8000000n);
-    //connect で addr1 の立場になって，addr2 へ 1000000n送付する
+    // connect でテストの主体を addr1 に切り替える
+    // addr1 から addr2 へトークンを 1000000n 送付する
     await JPYcoin.connect(addr1).transfer(addr2,1000000n);
     expect(await JPYcoin.balanceOf(addr1.address)).to.equal(7000000n);
     expect(await JPYcoin.balanceOf(addr2.address)).to.equal(1000000n);
   });
-
 });
 
 ```
@@ -211,13 +215,13 @@ npx hardhat test
   3 passing (388ms)
 ```
 
-## hardhat node の起動
+### hardhat node の起動
 
 ```bash
 npx hardhat node
 ```
 
-### hardhat ignition によるデプロイモジュールの作成
+#### hardhat ignition によるデプロイモジュールの作成
 
 * 別のターミナルのプロジェクトルートからの操作
 
@@ -246,7 +250,7 @@ module.exports = buildModule("JPYcoin", (m) => {
 ```
 
 
-### ローカルノードへのデプロイ
+#### ローカルノードへのデプロイ
 
 ```bash
 npx hardhat ignition deploy ignition/modules/JPYcoin.js --network localhost
@@ -266,15 +270,15 @@ Deployed Addresses
 JPYcoin#JPYcoin - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
-## コンソールからの操作
+### コンソールからの操作
 
-### コンソールの起動
+#### コンソールの起動
 
 ```bash
 npx hardhat console --network localhost 
 ```
 
-### ERC20 コントラクトへの操作
+#### ERC20 コントラクトへの操作
 
 以下の操作をしながら，ノードの画面に表示されるログも確認してください
 
@@ -318,21 +322,22 @@ npx hardhat console --network localhost
 8000000n
 ```
 
+## メタマスクによる ERC20トークンの操作
 
-## メタマスク
-
-### アカウントのインポート
+### アカウントのメタマスクへのインポート
 
 * `アカウントをインポート`
 * 秘密鍵を入力
 
-### トークンのインポート
+### トークンのメタマスクへのインポート
 
 * `+ トークンをインポート` をクリック
 * コントラクトアドレスを入力
 * トークンボタンをクリック
 
-## Faucet : ERC20トークンを Eth で購入するコントラクトの作成
+## JPYFaucet コントラクト
+
+ ERC20トークンを Eth で購入できるようにするコントラクトの作成
 
 ###  Eth でトークンを販売するコントラクトの作成手順
 
@@ -342,7 +347,7 @@ npx hardhat console --network localhost
 2. コントラクトが所有するトークンを transferFrom 関数を使って購入者に送る。
 3. トークンとのレートは 1ETH あたりのトークン量として決める
 
-### 作成
+### コントラクトの作成
 
 * 新しいターミナルを開いて以下を実行
 * プロジェクトルートに移動
@@ -351,7 +356,7 @@ npx hardhat console --network localhost
 cd ~/hardhat/erc20
 ```
 
-### コントラクトのコード
+#### コントラクトのコード
 
 ```bash
 nano contracts/JPYFaucet.sol
@@ -361,34 +366,38 @@ nano contracts/JPYFaucet.sol
 // SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
-// OpenZeppelinのライブラリをインポートする
+// OpenZeppelinの ERC20 ライブラリをインポートする
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
+// JPYcoin のインポートする
 import "./JPYcoin.sol";
 
 contract JPYFaucet {
-    JPYcoin public token;
-    address public owner;
-    uint256 public rate; // 1ETH あたりのトークン
+    JPYcoin public token; // JPYcoin コントラクトのインスタンスを格納する変数
+    address public owner; // 所有者のアドレス
+    uint256 public rate;  // 1ETH と交換されるトークンの量（交換比率）
+
     // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
     constructor(uint256 _rate) {
         rate = _rate;
         owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
     }
 
-    // トークンコントラクトのインスタンスをセットする
+    // トークンコントラクトのインスタンスを状態変数に代入する
     function setToken(JPYcoin _token) public {
         token = _token;
     }
-    // コントラクトにETHを送信するための関数
-    // この ETH はトークン購入の代金になるので，ETHを受領すると購入者にJPYトークンを代理送金します
+    // トークンの購入を実施する関数
+    // このコントラクトが ETHを受領すると購入者にJPYトークンを代理送金します
+    // この関数は ETH の送金が可能でなければならない
     function buyTokens() public payable {
-        // msg.value     呼び出しトランザクションで送金された ETH の金額（wei単位）
+        // msg.value :この関数を呼ぶトランザクションで送金された ETH の金額（wei単位）
+        // この ETH の金額が購入代金になるので，0より大きくなければならない
         require(msg.value > 0, "ETH must be greater than 0");
-        // 購入トークン量の計算
+        // 購入する ETH から交換比率に従って送付するトークン量を計算する
         uint256 tokenAmount = msg.value * rate;
-        // 売り手に十分なトークンがあるか確認
+        // 売り手 (owner) に十分なトークンがあるか確認
         require(token.balanceOf(owner) >= tokenAmount, "Seller does not have enough tokens");
-        // 売り手から購入者へのトークン送信
+        // 売り手から購入者へトークンを送金する（トークンの送金にエラーが起きなければ）
         require(token.transferFrom(owner, msg.sender, tokenAmount), "Token transfer failed");
     }
     // 売り手(所有者)がETHを引き出すための関数
@@ -401,8 +410,6 @@ contract JPYFaucet {
         return address(this).balance;
     }
 }
-
-
 ```
 
 * コンパイル
@@ -410,6 +417,90 @@ contract JPYFaucet {
 ```bash
 npx hardhat compile
 ```
+
+
+## JPYFaucetコントラクトのテスト
+
+JPYFaucet のテストには，JPYcoin のデプロイも必要
+  
+```bash
+nano test/JPYFaucet.js
+```
+
+```js
+// hardhat tool box の利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// CHaiの利用
+const { expect } = require("chai");
+
+describe("JPYFaucetコントラクト", function () {
+  // JPYFaucetコントラクトのフィクスチャをデプロイする関数
+  async function deployJPYFaucetFixture() {
+    // JPYFaucet コントラクトをデプロイする
+    // ETH とトークンの交換比率は 20
+    const JPYFaucet = await ethers.deployContract("JPYFaucet",[20]);
+    // JPYFaucetテスト用フィクスチャ
+    return JPYFaucet;
+  }
+  // JPYcoin コントラクトのフィクスチャをデプロイする関数
+  async function deployJPYcoinFixture() {
+    // テスト用アカウントの取得
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする（総供給量 10**11)
+    const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
+    // JPYcoinテスト用フィクスチャ
+    return {JPYcoin, owner, addr1, addr2};
+  }
+  it("JPYcoin をトークンとして JPYFaucet にセットする", async function () {
+    const JPYFaucet = await loadFixture(deployJPYFaucetFixture);
+    // JPYcoinテスト用フィクスチャをロードする
+    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    // JPYcoin を JPYFaucet にトークンとしてセットする
+    await JPYFaucet.setToken(JPYcoin);
+    // ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
+    await JPYcoin.approve(JPYFaucet,1000000000);
+  });
+    it("JPYcoinトークンを購入する", async function () {
+    const JPYFaucet = await loadFixture(deployJPYFaucetFixture);
+    // JPYcoinテスト用フィクスチャをロードする
+    const {JPYcoin, owner, addr1, addr2} = await loadFixture(deployJPYcoinFixture);
+    // JPYcoin を JPYFaucet にトークンとしてセットする
+    await JPYFaucet.setToken(JPYcoin);
+    // ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
+    await JPYcoin.approve(JPYFaucet,1000000000n);
+    // addr1 がトークン購入 (ETH を 20000 wei) 送金
+    await JPYFaucet.connect(addr1).buyTokens({value: 20000n});
+    // addr1 のトークン保有量を確認（購入 ETH の20倍 のトークン）
+    expect(await JPYcoin.balanceOf(addr1.address)).to.equal(400000n);
+  });
+});
+
+```
+
+### testの実行
+
+```bash
+npx hardhat test 
+=>
+
+  JPYFaucetコントラクト
+    ✔ JPYcoin をトークンとして JPYFaucet にセットする (412ms)
+    ✔ JPYcoinトークンを購入する
+
+  JPYcoinコントラクト
+    ✔ JPYcoinの総供給量をownerが所有している
+    ✔ JPYcoinの owner から addr1 への配布
+    ✔ JPYcoinの addr1 から addr2 への送付
+
+
+  5 passing (438ms)
+```
+
+
+
+
+
+
 
 
 ### hardhat ignition によるデプロイモジュールの作成
@@ -470,7 +561,7 @@ npx hardhat console --network localhost
 > const JPYcoin = await JPYcoin_Factory.attach(JPYcoin_addr)
 ```
 
-* JPYcoin をトークンとして設定する
+* JPYcoin をトークンとして JPYFaucet に設定する
 
 ```js
 > await JPYFaucet.setToken(JPYcoin);
