説明の追加

--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2025/01.24
+2025/02/07
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -212,28 +212,30 @@ nano contracts/Token.sol
 ```
 ファイルの内容
 
-* コメントをよく読んでください
+* 単純にコピー／ペーストするのではなく，すべての行を読んでください
+* 特にコメントをよく読んでください
 
 ```js
 //SPDX-License-Identifier: MIT
 pragma solidity ^0.8.0;
 
-// スマートコントラクトの定義
+// Token コントラクトの定義
 contract Token {
-    // トークンのタイプとシンボル名
+    // トークン名と通貨記号
     string public name = "Kindai Token";
     string public symbol = "KDT";
-    // トークンの総量
+    // トークンの発行総量
     uint256 public totalSupply = 1000000;
-    // オーナーのアドレス
+    // 最初の所有者（発行者）のアドレス
     address public owner;
-    // アカウントごとのトークンの所持金を管理するマップ
+    // アカウントごとのトークンの所持金残高を管理するマップ
     mapping(address => uint256) balances;
-    // チェーンの外部にこのコントラクトの状況を伝えるためのイベント
+    // 外部にこのコントラクトによる送金の発生を伝えるためのイベント
+    // indexed を付けることで送金者や受領者のアドレスでイベントを検索できるようになる
     event Transfer(address indexed _from, address indexed _to, uint256 _value);
 
     /**
-     * コントラクトの初期化
+     * コンストラクタによるコントラクトの初期化
      */
     constructor() {
         // トークンの総量がこのコントラクトをデプロイするトランザクションの送信者に割り当てられる
@@ -247,9 +249,9 @@ contract Token {
      * `external` の指定によりコントラクトの外部からのみアクセス可能な関数
      */
     function transfer(address to, uint256 amount) external {
-        // トランザクションの送金者が十分な所持金を持っていることをチェックする
-        // 不十分なら失敗する
-        require(balances[msg.sender] >= amount, "Not enough tokens");
+        // トランザクションの送金者が十分なトークン残高を持っていることをチェックする
+        // 残高不十分なら失敗する
+        require(balances[msg.sender] >= amount, "Insufficient balance");
 
         // 指定した金額を送金者の所持金から減額し送金先の所持金を増額する
         balances[msg.sender] -= amount;
@@ -333,51 +335,16 @@ cat artifacts/contracts/Token.sol/Token.json
 
 ```
 
-
 ## <a id="test"> コントラクトのテスト</a>
 
-* コントラクトのテストは ローカルノードである Hardhat Networkで実施します．
 * コントラクトの操作は，ethere.js を利用します
 * テスト実行は JavaScript のテストフレームワーク Chai と Mocha を利用します．
 
-### テストプログラムの作成
-
-* プロジェクトルートの下に test ディレクトリにテストプログラムを作成します
-* ★ hardhat では，chai を ES6モジュール（commonJSモジュール）ではなく Node.js モジュールとして require で読み込むことに注意してください
-
-* Token.js 
-
-```bash
-nano test/Token.js
-```
-
-* コメントをよく読んでください
-
-```js
-const { expect } = require("chai");
-
-describe("トークンのコントラクト", function () {
-  it("デプロイによりトークンの総量が所有者に割り当てられること", async function () {
-    // ethers.getSigners() は，トランザクション送信者のEthereumアカウントを返すメソッド
-    const [owner] = await ethers.getSigners();
-    // ethers.deployContract()  は，引数のコントラクトをデプロイする ethers.js メソッド
-    const Token = await ethers.deployContract("Token");
-    // オーナーの所持金
-    const ownerBalance = await Token.balanceOf(owner.address);
-    // トークンの総量はオーナーの所持金と等しい
-    expect(await Token.totalSupply()).to.equal(ownerBalance);
-  });
-});
-```
-
-* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
-* キーボード：`<ctrl x>` で nano エディタ終了
-
-### Chai.js によるテストのアサーションの記述
+### Chai.js によるテストのアサーションの記述方法
 
 should , expect, assert の３タイプのテストの流儀が利用可能
 
-#### expect タイプの記述方法
+#### expect タイプの場合
 
 * メソッドチェーン(以下のメソッドは読みやすさのためのもので，処理の連鎖以外の意味は無い）
 to
@@ -396,7 +363,7 @@ and
 * within(開始, 終了) : 開始から終了の間 
 
 ```js
-expect(x).to.equal(2);  		// xは2に等しい
+expect(x).to.equal(2);  		  // xは2に等しい
 expect(x).to.be.a('string');  	// x はstring型
 expect(x).to.be.an('array');  	// x はarray型
 expect(x).to.include(3);  		// xは3を含む
@@ -425,7 +392,7 @@ expect(x).to.be.false		    // xは false
 * afterEach()    ：個別のアサーションの事後処理
 
 
-#### Mocha の例
+#### Mocha によるテストの例
 
 ```js
 describe("べき乗関数 pow", function() {
@@ -442,7 +409,7 @@ describe("べき乗関数 pow", function() {
 
 ```
 
-#### ethers.js (v6系) を使ったコントラクトのデプロイ
+### ethers.js (v6系) を使ったコントラクトのデプロイ
 
 * ethers.deployContract 関数
 
@@ -459,6 +426,61 @@ const contract = await ethers.deployContract(abi, contract,[args])
     * コンストラクタの初期値の配列: []
   * 返り値
     *デプロイしたトランザクションのハッシュ値
+
+### Hardhat Toolbox の利用
+
+hardhat には etheres.js を利用して開発するための各種ツールが備わっています．
+
+[Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)
+
+
+* test やデプロイには，hardhat toolbox を利用するのが便利です
+
+
+## テストプログラムの作成
+
+* プロジェクトルートの下に test ディレクトリにテストプログラムを作成します
+* hardhat では，chai を ES6モジュール（commonJSモジュール）ではなく Node.js モジュールとして require で読み込むことに注意してください
+
+* Token.js 
+
+```bash
+nano test/Token.js
+```
+
+* hardhat toolbox の loadFixture を利用します．
+* コントラクトのデプロイとテスト用アカウントを生成する処理を関数として定義しています
+* it によるテスト項目ごとに上記の関数と loadFixture でテスト環境を初期化します
+
+```js
+// hardhat tool box の loadFixture 利用
+const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers");
+// Chaiのライブラリを利用
+const { expect } = require("chai");
+
+describe("Tokenコントラクトのテスト", function () {
+  // Token コントラクトのデプロイとテスト用アカウントを準備する関数
+  async function deployTokenFixture() {
+    // テスト用アカウントの取得（ethers.getSigners() はアカウント取得用関数）
+    const [owner, addr1, addr2] = await ethers.getSigners();
+    // コントラクトをデプロイする
+    const Token = await ethers.deployContract("Token");
+    // テスト用フィクスチャ
+    return { Token, owner, addr1, addr2 };
+  }
+  it("デプロイによりトークンの総量が所有者に割り当てられること", async function () {
+    // Token テスト用フィクスチャをロードする
+    const {Token, owner, addr1, addr2} = await loadFixture(deployTokenFixture);
+    // オーナーの所持金の初期値
+    const ownerBalance = await Token.balanceOf(owner.address);
+    // トークンの総量がオーナーの所持金の初期値と等しいことの確認
+    expect(await Token.totalSupply()).to.equal(ownerBalance);
+  });
+});
+```
+
+* キーボード：`<ctrl o>` で保存先ファイル名を確認して `<Enter>` で保存
+* キーボード：`<ctrl x>` で nano エディタ終了
 
 
 ### テストの実行
@@ -503,9 +525,6 @@ expect(await Token.totalSupply()).to.equal(ownerBalance);
 ```
 
 #### テストの修正
-
-* テスト環境を整備するために  hardhat tool box が提供するフィクスチャーを利用するように修正します．これによってテスト用のアカウントなどが利用できるようになります．
-* [Hardhat Toolbox](https://hardhat.org/hardhat-runner/plugins/nomicfoundation-hardhat-toolbox)  を利用します
 
 ```bash
 nano test/Token.js
@@ -688,7 +707,7 @@ nano ignition/modules/Token.js
 ```js
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-// モジュール名をTutorial にする．m がモジュールになる
+// ここではモジュール名をTutorial にする．m がモジュールになる
 module.exports = buildModule("Tutorial", (m) => {
   // コントラクト名Tokenのインスタンスに対するデプロイ指示となる Future オブジェクトの生成
   // コンストラクタの引数は無い
