デプロイの説明修正

--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -705,12 +705,13 @@ nano ignition/modules/Token.js
 ```
   
 ```js
+// hardhat toolbox の
 const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
-// ここではモジュール名をTutorial にする．m がモジュールになる
+// ここではモジュール名をTutorial にしている．m がモジュールになる
 module.exports = buildModule("Tutorial", (m) => {
   // コントラクト名Tokenのインスタンスに対するデプロイ指示となる Future オブジェクトの生成
-  // コンストラクタの引数は無い
+  // この例ではコンストラクタの引数は無いが，引数がある場合は配列の中に設定する
   const contract = m.contract("Token", []);
   // コントラクトをデプロイするFuture オブジェクトを返す
   return { contract };
