--- a/ethereum/02. console.md
+++ b/ethereum/02. console.md
@@ -1,6 +1,7 @@
 # 02. Hardhat による Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2025/01/24 Shigeichiro Yamasaki
+最終更新 2025/02/07 
+Shigeichiro Yamasaki
 
 ## 前提条件
 
