コンソール操作の修正

--- a/ethereum/03. payable.md
+++ b/ethereum/03. payable.md
@@ -1,6 +1,6 @@
 # 03. Eth を所有可能なコントラクトの作成
 
-2025/01.24
+2025/02/07
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -190,23 +190,25 @@ npx hardhat console --network localhost
 * コントラクトへの接続
 
 ```js
-> const EthWallet_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const EthWallet_Factory = await ethers.getContractFactory("EthWallet")
-> const EthWallet =  await EthWallet_Factory.attach(EthWallet_addr)
+> const [owner, addr1, addr2] = await ethers.getSigners();
+> const EthWallet = await ethers.deployContract("EthWallet");
 ```
 
-* テスト用アカウント
+
+* コントラクトアドレス
 
 ```js
-> const [owner, addr1, addr2] = await ethers.getSigners();
+> const EthWallet_addr = await EthWallet.target;
+> EthWallet_addr
+'0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512'
 ```
+
 
 * sendTransaction メソッドを使った ETH の送金
 
 ```js
 // EthWallet へ ETH を送金する (10000000 wei)
 > await owner.sendTransaction({to: EthWallet_addr, value: 10000000n});
-
 ```
 
 * getBalance 関数
