コンソール操作修正

--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -283,11 +283,8 @@ npx hardhat console --network localhost
 以下の操作をしながら，ノードの画面に表示されるログも確認してください
 
 ```js
-> const JPYcoin_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
 // コントラクトのデプロイ
-> const JPYcoin_Factory = await ethers.getContractFactory("JPYcoin")
-// 当該コントラクトアドレスのコントラクトに接続する
-> const JPYcoin = await JPYcoin_Factory.attach(JPYcoin_addr)
+> const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
 
 // テスト用アカウント
 > const [owner, addr1, addr2] = await ethers.getSigners();
@@ -496,13 +493,6 @@ npx hardhat test
   5 passing (438ms)
 ```
 
-
-
-
-
-
-
-
 ### hardhat ignition によるデプロイモジュールの作成
 
 ```bash
@@ -548,17 +538,8 @@ npx hardhat console --network localhost
 ```
 
 ```js
-// JPYFaucet
-> const JPYFaucet_addr = "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
-> const JPYFaucet_Factory = await ethers.getContractFactory("JPYFaucet")
-> const JPYFaucet = await JPYFaucet_Factory.attach(JPYFaucet_addr)
-```
-
-```js
-// JPYcoin
-> const JPYcoin_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const JPYcoin_Factory = await ethers.getContractFactory("JPYcoin")
-> const JPYcoin = await JPYcoin_Factory.attach(JPYcoin_addr)
+> const JPYFaucet = await ethers.deployContract("JPYFaucet",[20]);
+> const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
 ```
 
 * JPYcoin をトークンとして JPYFaucet に設定する
@@ -570,7 +551,7 @@ npx hardhat console --network localhost
 * ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
 
 ```js
-> await JPYcoin.approve(JPYFaucet,1000000000);
+> await JPYcoin.approve(JPYFaucet,1000000000n);
 
 ```
 
@@ -583,7 +564,7 @@ npx hardhat console --network localhost
 * トークン購入 (ETH を 20000 wei) 送金
 
 ```js
-> await JPYFaucet.buyTokens({value: 20000})
+> await JPYFaucet.connect(addr1).buyTokens({value: 20000})
 
 ```
 
@@ -591,26 +572,23 @@ npx hardhat console --network localhost
 
 ```js
 > await JPYcoin.balanceOf(addr1.address)
-8000000n
+400000n
 > await JPYcoin.balanceOf(owner.address)
-99992000000n
-
+99999600000n
 ```
-
 
 * トークン購入 (ETH を 50000 wei) 送金
 
 ```js
-> await JPYFaucet.buyTokens({value: 50000})
+> await JPYFaucet.connect(addr2).buyTokens({value: 50000})
 
 ```
 
 * トークン保有量の確認
 
 ```js
-> await JPYcoin.balanceOf(addr1.address)
-8000000n
+> await JPYcoin.balanceOf(addr2.address)
+1000000n
 > await JPYcoin.balanceOf(owner.address)
-99992000000n
-
+99998600000n
 ```
