コンソール操作の修正

--- a/ethereum/05. ERC721.md
+++ b/ethereum/05. ERC721.md
@@ -1,6 +1,6 @@
 # 05. ERC721 トークンの作成と利用
 
-2025/01/25
+2025/02/08
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC721 NFTを処理するコントラクト
@@ -159,7 +159,7 @@ yarn add --dev @openzeppelin/contracts
 * tokenIDは自動でインクリメントされます
 * NFTの所有者によるアクセス制御を備えます
 * URIで参照するストレージで音源データの実体を管理します
-* 
+  
 
 ```bash
 nano contracts/MusicNFT.sol
@@ -286,8 +286,6 @@ describe("MusicNFTコントラクト", function () {
     expect(tokenID).to.equal(2n);
   });
 });
-
-
 ```
 
 ### testの実行
@@ -310,7 +308,6 @@ npx hardhat test
 npx hardhat node
 ```
 
-
 ## hardhat ignition によるデプロイモジュールの作成
 
 * 別のターミナルのプロジェクトルートからの操作
@@ -332,6 +329,7 @@ const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 
 // モジュール名 MusicNFT
 module.exports = buildModule("MusicNFT", (m) => {
+  // 所有者のアドレス
   const owner = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266";
   // コントラクト名 MusicNFT
   const contract = m.contract("MusicNFT", [owner]);
@@ -371,12 +369,13 @@ npx hardhat console --network localhost
 ### ERC20 コントラクトへの操作
 
 ```js
-> const MusicNFT_addr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const MusicNFT_Factory = await ethers.getContractFactory("MusicNFT")
-> const MusicNFT = await MusicNFT_Factory.attach(MusicNFT_addr)
-
 // テスト用アカウント
 > const [owner, addr1, addr2] = await ethers.getSigners();
+// コントラクトのデプロイ
+> const MusicNFT = await ethers.deployContract("MusicNFT",[owner]);
+
+
+
 // 新しい音源NFTの採掘
 > await MusicNFT.safeMint(addr1, "https://music.example/music1.json")
 // tokenID 0 の所有者のアドレス
@@ -387,4 +386,8 @@ npx hardhat console --network localhost
 // addr1 が所有するNFTを addr2 に移転する
 // connect で所有者によるトランザクションの署名にすることが必要
 > await MusicNFT.connect(addr1).safeTransferFrom(addr1.address, addr2.address, 0)
+// tokenID 0 の所有者のアドレスの確認
+> await MusicNFT.ownerOf(0)
+'0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC'
 ```
+
