--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -121,14 +121,21 @@ const {loadFixture} = require("@nomicfoundation/hardhat-toolbox/network-helpers"
 // CHaiの利用
 const { expect } = require("chai");
 
-describe("counterコントラクト", function () {
-  // JPYcoin コントラクトのフィクスチャをデプロイする関数
-  async function deployCounterFixture() {
-    // コントラクトをデプロイする（総供給量 10**11)
-    const Counter = await ethers.deployContract("Counter",[]);
-    // JPYcoinテスト用フィクスチャ
-    return {Counter};
-  }
+describe("counterコントラクトのインターフェース", function () {
+     async function deployMyContractFixture() {
+        const Counter = await ethers.deployContract("Counter",[]);
+        const MyContract = await ethers.deployContract("MyContract",[]);
+        return {Counter, MyContract};
+     }
+     it("MyContractでCounterを利用する", async function () {
+      // コントラクトをロードする
+      const {Counter, MyContract} = await loadFixture(deployMyContractFixture);
+      // Counterコントラクトを利用して 2回カウントアップする
+      await MyContract.incrementCounter(Counter.target);
+      await MyContract.incrementCounter(Counter.target);
+      // カウントを参照するして結果が 2n になる
+      expect(await MyContract.getCount(Counter.target)).to.equal(2n);
+    });
 });
 
 ```
