テストの作成

--- a/ethereum/08. interface.md
+++ b/ethereum/08. interface.md
@@ -133,7 +133,7 @@ describe("counterコントラクトのインターフェース", function () {
       // Counterコントラクトを利用して 2回カウントアップする
       await MyContract.incrementCounter(Counter.target);
       await MyContract.incrementCounter(Counter.target);
-      // カウントを参照するして結果が 2n になる
+      // カウントを参照し，結果が 2n になる
       expect(await MyContract.getCount(Counter.target)).to.equal(2n);
     });
 });
